src/component/PortfolioItem.css
:root {
  --portfolio-type-color: #121221;
  --portfolio-header-color: #24249b;
  --portfolio-description-bg-color: transparent;
  --portfolio-divider-color: #acacb9;
  --portfolio-text-size: 14px;
}

.portfolio-item {
  display: block;
  padding: 8em 0em 2em 0em;
  color: var(--portfolio-type-color);
  height: auto;
  font-size: var(--portfolio-text-size);
  scroll-snap-align: start;
  box-sizing: border-box;
  position: relative;
}

.portfolio-item .header1 {
  padding: 0em;
  margin: 0em;
  font-family: "Inter";
  font-weight: 300;
  font-size: 3em;
  letter-spacing: 2px;
  text-align: left;
  box-sizing: border-box;
  color: var(--portfolio-header-color);
  text-transform: uppercase;
  /* box-shadow: 8px 8px 20px rgba(255, 255, 255, 0.109); */
}

.portfolio-item .header2 {
  padding: 0em;
  margin: 0em;
  font-family: "Inter";
  font-size: 1.5em;
  font-weight: 300;
  color: var(--portfolio-type-color);
  text-align: left;
  width: 100%;
  letter-spacing: -0.05em;
}

.portfolio-item .description-items {
  display: grid;
  width: clamp(800px, 100dvw, 1400px);
  height: clamp(800px, fit-content, 1000px);
  grid-template-columns: 1fr 4fr;
  grid-auto-rows: min-content;
  row-gap: 0em;
  column-gap: 2em;
  background-color: var(--portfolio-description-bg-color);
  padding: 1em;
  box-sizing: border-box;
}

.portfolio-item .description-items .sub-grid-header {
  grid-column: span 1;
  grid-row: span 1;
  line-height: 1.25em;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: start;
  padding: 0em var(--portfolio-text-size) var(--portfolio-text-size) 0em;
  border-right: var(--portfolio-divider-color) solid 1px;
}

.portfolio-item .description-items .sub-grid-sub-header {
  grid-column: span 1;
  grid-row: span 3;
  grid-column-start: 1;
  font-size: 2em;
  line-height: 1.25em;
  letter-spacing: 0.05em;
  padding: 0em var(--portfolio-text-size) var(--portfolio-text-size) 0em;
  border-right: var(--portfolio-divider-color) solid 1px;
}

.portfolio-item .description-items .sub-grid-1 {
  grid-column: span 1;
  grid-row: span 1;
  grid-column-start: 2;
  line-height: 1.25em;
  padding: 0em 0em 1em 0em;
  height: 100%;
  display: flex;
  align-items: start;
}

.portfolio-item .description-items .sub-grid-wide {
  grid-column: span 2;
  grid-row: span 1;
  padding: 1em 0em 0em 0em;
  border-top: var(--portfolio-divider-color) solid 1px;
}

.portfolio-item .child-space {
  grid-column: span 1;
  grid-row: span 1;
  grid-column-start: 2;
  padding: 0em 0em 1.5em 0em;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.portfolio-item .portfolio-gallery {
  display: grid;
  width: 100%;
  max-width: 100%;
  height: fit-content;
  gap: 1em;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
}

.portfolio-item .portfolio-gallery .portfolio-gallery-photo {
  width: 100%;
  height: 100%;
  background-color: #ffffff;
  object-fit: contain;
}

.portfolio-item .portfolio-source-button {
  position: absolute;
  top: 9em;
  right: 1em;
  margin: 0px;
  background-color: transparent;
  color: var(--portfolio-type-color);
  font-size: 1em;
  font-family: "DM Mono";
  font-weight: 300;
  text-transform: uppercase;
  padding: 0.5em 1em 0.5em 1em;
  border-color: var(--portfolio-divider-color);
  border-style: solid;
  border-width: 2px;
  animation-name: source-flashing;
  animation-duration: 0.4s;
  animation-timing-function: cubic-bezier(0.43, 0.01, 0.67, 0.99);
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-delay: 0s;
}

@keyframes source-flashing {
  from {
    border-color: var(--portfolio-divider-color);
  }
  to {
    border-color: var(--portfolio-header-color);
  }
}

.portfolio-item .portfolio-source-button:hover {
  background-color: #06040415;
}

@media only screen and (max-width: 768px) {
  :root {
    --portfolio-text-size: 14px;
  }

  .portfolio-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-top: 1em;
    padding-bottom: 1em;
    border-bottom: var(--portfolio-divider-color) solid 1px;
  }

  .portfolio-item .description-items {
    display: flex;
    flex-direction: column;
    width: 100dvw;
  }

  .portfolio-item .header1 {
    font-size: 2em;
    letter-spacing: 2px;
  }

  .portfolio-item .header2 {
    font-size: 1em;
  }

  .portfolio-item .description-items .sub-grid-header {
    border-right: transparent solid 1px;
  }

  .portfolio-item .description-items .sub-grid-sub-header {
    border-right: transparent solid 1px;
    font-size: 1.5em;
  }

  .portfolio-item .description-items .sub-grid-1 {
    line-height: 1.5em;
  }

  .portfolio-item .portfolio-source-button {
    position: relative;
    top: 0%;
    right: 0%;
  }
}

